fix bug: pop pullquote style element overlapping other clickable blocks

--- a/src/blocks/pullquote/_bu-blocks-block-pullquote-base.scss
+++ b/src/blocks/pullquote/_bu-blocks-block-pullquote-base.scss
@@ -143,6 +143,7 @@
 			@extend %col-4;
 			display: -ms-flexbox;
 			display: flex;
+			pointer-events: none;
 		}
 		.container-icon-inner {
 			width: 100%;
